--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
-set(CMAKE_PREFIX_PATH "/Users/ginovalentinopensuni/Qt/6.6.1/macos/lib/cmake/Qt6")
-
+set(CMAKE_PREFIX_PATH $ENV{QT_CMAKE_PREFIX_PATH})
 
 find_package(Qt6 COMPONENTS
         Core
